@@ -4,6 +4,7 @@ Version explained:
  bug   : increase on bug or incremental changes
 
 Version 4.1.1
+ * CHANGE: some message are now printed using the log routes option and not parser anymore
 
 Version 4.1.0
  * CHANGE: when redifining a single parameter option using inheritence the value will be replaced
